# standard-action-translator

./: .gitignore  LICENSE  README.md  pyproject.toml
data/standard_packs/shapingba_learning_group_2026/: action_templates.json  examples.json  gap_rules.json  metadata.json  standards.json
data/standard_packs/template_school_pack/: action_templates.json  gap_rules.json  metadata.json  standards.json
docs/: changelog_policy.md  migration_guide.md  product_positioning.md  standard_pack_schema.md  why_not_plain_llm.md
examples/: b5_plan_input.md  b5_plan_output.md  b7_activity_plan_input.md  b7_activity_plan_output.md  b8_activity_record_input.md  b8_activity_record_output.md
prompts/: action_generation_prompt.md  anti_ghostwriting_prompt.md  diagnosis_prompt.md  migration_prompt.md  system_prompt.md
src/standard_action_translator/: __init__.py  action_generator.py  cli.py  diagnostician.py  guardrails.py  interpreter.py  llm_provider.py  loaders.py  models.py  output_formatter.py  validators.py  versioning.py
tests/: test_cli.py  test_diagnosis_b7.py  test_guardrails.py  test_loaders.py  test_positive_feedback.py  test_schema_validation.py  test_versioning.py
