[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standard-action-translator"
version = "0.1.0"
description = "Turn teaching-research standards into concrete improvement actions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]
authors = [
    { name = "standard-action-translator contributors" }
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
sat = "standard_action_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
